# mcp-qqmusic

./: .gitignore  QQMusicApi-SDK完整功能清单.md  README.md  login.bat  login.py  logout.bat  pyproject.toml
src/mcp_qqmusic/: __init__.py  __main__.py  format.py  server.py
